# shedskin

./: .gitattributes  .gitignore  .mailmap  .readthedocs.yaml  .travis.yml  404.html  CHANGELOG.md  FLAGS  LICENSE  MANIFEST.in  Makefile  README  README.html  README.md  README.rst  backward.py  bert.py  colorsys.py  conf.py  correct  cpp.py  debian  dist.py  documentation.rst  extmod.py  gitignore  graph.py  index.html  index.rst  infer.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  shared.py  shedskin.rst  sitemap.xml  ss.py  t2.py  test.cpp  (+13 more)
examples/: .gitignore  CMakeLists.txt  DISCO  DancingLinks.py  Kanoodle.py  LZ2.py  README  README.md  TarsaLZP.py  TonyJpegDecoder.py  WebServer.py  ac_encode.py  adatron.py  amaze.py  ant.py  astar.py  astar_main.py  bh.py  block.py  brainfuck.py  build_check_all.sh  c64.py  c64_main.py  chaos.py  chess.py  chull.py  circle.py  circle_main.py  circle_packing.py  colorsys.py  dijkstra.py  dijkstra2.py  disco.py  engine.py  fysphun.py  fysphun_main.py  genetic.py  genetic2.py  go.py  go_main.py  (+73 more)
examples/Gh0stenstein/: world_draw.py  world_manager.py
examples/ac_encode/: CMakeLists.txt  ac_encode.py
examples/adatron/: CMakeLists.txt  adatron.py
examples/amaze/: CMakeLists.txt  amaze.py
examples/ant/: ant.py
examples/astar/: CMakeLists.txt  README.md  astar.py  astar_main.py  astar_orig.py
examples/bh/: CMakeLists.txt  bh.py
examples/block/: CMakeLists.txt  block.py
examples/brainfuck/: brainfuck.py
examples/c64/: CMakeLists.bak.txt  CMakeLists.txt  README.md  TODO  __init__.py  c64.py  c64_main.py  c64ugh.py  cia.py  cpu.py  gdisplay.py  joysticks.py  memory.py  mmu.py  origscreens.py  palette.py  pixbufs.py  sid.py  sprite.py  symbols.py  tape.py  timer.py  vic_ii.py
examples/c64_test/: cia.py  cpu.py  memory.py  sid.py  vic_ii.py
examples/chaos/: CMakeLists.txt  chaos.py
examples/chess/: CMakeLists.txt  chess.py
examples/chull/: chull.py
examples/circle/: CMakeLists.txt  README.md  circle.py  circle_main.py
examples/collatz/: CMakeLists.txt  README.md  collatz.py
examples/dijkstra/: dijkstra.py
examples/dijkstra2/: CMakeLists.txt  dijkstra2.py
examples/doom/: CMakeLists.txt  README.md  doom.py  doom_main.py  render.py
examples/fysphun/: CMakeLists.txt  README.md  fysphun.py  fysphun_main.py
examples/genetic/: genetic.py
examples/genetic2/: CMakeLists.txt  genetic2.py
examples/go/: CMakeLists.txt  go.py
examples/gs/: CMakeLists.bak.txt  CMakeLists.txt  README.md  gs_main.py
examples/hq2x/: CMakeLists.txt  hq2x.py  randam.ppm
examples/imageproc_lib/: libgfx.c  libgfx.py
examples/kanoodle/: kanoodle.py
examples/kmeanspp/: kmeanspp.py
examples/lib/: array.cpp  array.hpp  array.py  hashlib.cpp  hashlib.hpp  pygame.cpp  serial.cpp  serial.hpp  serial.py  struct.cpp  struct.hpp
examples/life/: CMakeLists.txt  life.py
examples/linalg/: CMakeLists.txt  linalg.py
examples/loop/: loop.py
examples/lz2/: lz2.py
examples/mandelbrot/: mandelbrot.py
examples/mandelbrot2/: CMakeLists.txt  README.md  mandelbrot2.py  mandelbrot2_main.py
examples/mao/: CMakeLists.txt  mao.py
examples/mastermind/: CMakeLists.bak.txt  CMakeLists.txt  README.md  board.py  code.py  colour.py  game.py  mastermind.py  peg.py  row.py
examples/mastermind2/: CMakeLists.txt  mastermind2.py
examples/minilight/: CMakeLists.txt  camera.py  cornellbox.txt  image.py  minilight.py  raytracer.py  scene.py  spatialindex.py  surfacepoint.py  triangle.py  vector3f.py
examples/minpng/: CMakeLists.txt  minpng.py
examples/ml/: camera.py  minilight.py  raytracer.py  scene.py  spatialindex.py  triangle.py
examples/mm/: game.py  mastermind.py
examples/msp_ss/: CMakeLists.txt  README.md  msp_ss.py
examples/mwmatching/: mwmatching.py
examples/nbody/: nbody.py
examples/neural1/: CMakeLists.txt  README.md  neural1.py
examples/neural2/: CMakeLists.txt  neural2.py
examples/oliva2/: oliva2.py
examples/othello/: othello.py
examples/othello2/: CMakeLists.txt  README.md  othello2.py
examples/othello3/: CMakeLists.txt  README.md  gen.py  othello3.py  ref.py
examples/path_tracing/: path_tracing.py
examples/pisang/: CMakeLists.txt  pisang.py
examples/plcfrs/: CMakeLists.txt  plcfrs.py
examples/pycsg/: CMakeLists.txt  README.md  pycsg_main.py
examples/pygasus/: CMakeLists.txt  README.md  pygasus.py  pygasus_main.py
examples/pygmy/: pygmy.py
examples/pylife/: CMakeLists.txt  README.md  pylife.py
examples/pylot/: CMakeLists.bak.txt  CMakeLists.txt  Camera.py  Color.py  Material.py  Matrix4.py  Pool.py  README.md  Ray.py  Shape.py  SimpleGeometry  SimpleGeometry.py  Utils.py  Vector4.py  World.py  main.py  pylot_main.py
examples/pystone/: pystone.py
examples/qmc/: coulomb.py  fermion.py  qmc_loop.py
examples/quameon/: CMakeLists.txt  README.md  box_bc.py  coulomb.py  fermion.py  qmc_loop.py  quameon.py  sto_atom  sto_atom.py  sum_jastrow.py  wave_func.py
examples/rdb/: CMakeLists.txt  rdb.py
examples/richards/: richards.py
examples/rsync/: CMakeLists.txt  README.md
examples/rubik/: CMakeLists.txt  rubik.py
examples/rubik2/: CMakeLists.txt  rubik2.py
examples/sat/: sat.py
examples/score4/: score4.py
examples2/: .gitignore  CMakeLists.txt  README.md  TODO.md  run.py
tests2/: .gitignore  CMakeLists.txt  README.md  runtests.py  test_arguments.py  test_assign.py  test_builtin_enumerate.py  test_builtin_format.py  test_builtin_iter.py  test_builtin_open.py  test_builtin_sorted.py  test_builtins.py  test_builtins_functional.py  test_builtins_logic.py  test_class_basic.py  test_class_inheritance.py  test_class_int.py  test_class_methods.py  test_class_numerical.py  test_class_object.py  test_class_point.py  test_class_seq.py  test_class_sub.py  test_class_super.py  test_control_for.py  test_control_if.py  test_control_while.py  test_exceptions.py  test_float.py  test_func_args.py  test_func_basic.py  test_func_func.py  test_func_functional.py  test_func_order.py  test_hello.py  test_kwrd_global.py  test_kwrd_none.py  test_list.py  test_list_comp.py  test_ops_arithmetic.py  (+26 more)
(+1404 files in other folders)
