[project]
name = "shedskin"
version = "0.9.12"
description = "Shed Skin is a restricted-Python-to-C++ compiler."
authors = [
    { name = "Mark Dufour and contributors" },
]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://shedskin.github.io"
Repository = "https://github.com/shedskin/shedskin"
Documentation = "https://shedskin.readthedocs.io"
"Bug Tracker" = "https://github.com/shedskin/shedskin/issues"

[project.scripts]
shedskin = "shedskin.__main__:run"

[dependency-groups]
dev = [
    "mkdocs-material>=9.0.0",
    "mypy>=1.14.1",
    "pytest>=7.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "shedskin/",
    "LICENSE",
    "pyproject.toml",
    "requirements.txt",
    "setup.py",
    "tox.ini",
    "doc/",
    "examples/",
    "tests/",
]

[tool.hatch.build.targets.wheel]
packages = ["shedskin"]
